--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -4,6 +4,14 @@
   <button mat-raised-button appGoogleSignin>
     <img src="/assets/google-logo.svg" /> Login with Google
   </button>
+
+
+<h5>OR</h5>
+
+<div *ngIf="!(afAuth.authState | async)">
+  <!-- omitted -->
+
+  <app-email-login></app-email-login>
 </div>
 
 <div *ngIf="afAuth.authState | async as user" class="logout">
