--- a/src/app/kanban/board/board.component.html
+++ b/src/app/kanban/board/board.component.html
@@ -17,11 +17,18 @@
     (cdkDropListDropped)="taskDrop($event)"
   >
     <div
-      class="inner-card"
-      cdkDrag
-      *ngFor="let task of board.tasks; let i = index"
-    >
+    class="inner-card"
+    cdkDrag
+    *ngFor="let task of board.tasks; let i = index"
+    (click)="openDialog(task, i)"
+>
+<button mat-stroked-button (click)="openDialog()">
+  <mat-icon>add</mat-icon> <app-delete-button (delete)="handleDelete()"></app-delete-button>
+</button>
+
       <mat-card [ngClass]="task.label"> {{ task.description }} </mat-card>
     </div>
+
+
   </div>
 </mat-card>
